--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       content="Cutting-edge tech support and next-generation software solutions for businesses that want to scale faster with modern design."
     />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/logo500.png" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
