contact info update

--- a/index.html
+++ b/index.html
@@ -905,13 +905,13 @@
                       <div>🌐 Remote-First Company</div>
                     </div>
                     <a
-                      href="javascript:void(0)"
-                      onclick="window.location.href='mailto:'+document.getElementById('contact-email').textContent"
+                      href="mailto:contact@enevels.com"
+                      onclick="window.location.href='mailto:contact@enevels.com'"
                       class="footer_link-item w-inline-block"
                     >
                       <div>
                         📧
-                        <span id="contact-email">contact@yourdomain.com</span>
+                        <span id="contact-email">contact@enevels.com</span>
                       </div>
                     </a>
                   </div>
@@ -1026,9 +1026,9 @@
       // ============================================
       const SITE_CONFIG = {
         companyName: "Enevel Software LLC",
-        contactEmail: "contact@yourdomain.com", // UPDATE THIS
+        contactEmail: "contact@enevels.com", // UPDATE THIS
         location: "New York, USA", // UPDATE THIS
-        website: "www.yourdomain.com", // UPDATE THIS
+        website: "www.enevels.com", // UPDATE THIS
         copyrightYear: new Date().getFullYear(),
       };
 
