--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   </div>
                   <div class="button-container">
                     <a href="#contact" class="button w-inline-block">
-                      <div>Get a Free Quote</div>
+                      <div>Get Started</div>
                       <div class="button-icon">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -802,10 +802,9 @@
                   <div class="cta_buttons">
                     <a
                       href="mailto:contact@enevels.com"
-                      onclick="alert('Contact form feature - Email: contact@enevels.com')"
                       class="button button-primary w-inline-block"
                     >
-                      <div>Get a Free Quote</div>
+                      <div>Contact Us</div>
                       <div class="button-icon">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -906,7 +905,6 @@
                     </div>
                     <a
                       href="mailto:contact@enevels.com"
-                      onclick="window.location.href='mailto:contact@enevels.com'"
                       class="footer_link-item w-inline-block"
                     >
                       <div>
