contact email update

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
                   </p>
                   <div class="cta_buttons">
                     <a
-                      href="mailto:contact@enevels.com"
+                      href="mailto:contact@enevelsoftwarelabs.com"
                       class="button button-primary w-inline-block"
                     >
                       <div>Contact Us</div>
@@ -904,12 +904,14 @@
                       <div>🌐 Remote-First Company</div>
                     </div>
                     <a
-                      href="mailto:contact@enevels.com"
+                      href="mailto:contact@enevelsoftwarelabs.com"
                       class="footer_link-item w-inline-block"
                     >
                       <div>
                         📧
-                        <span id="contact-email">contact@enevels.com</span>
+                        <span id="contact-email"
+                          >contact@enevelsoftwarelabs.com</span
+                        >
                       </div>
                     </a>
                   </div>
@@ -1024,9 +1026,9 @@
       // ============================================
       const SITE_CONFIG = {
         companyName: "Enevel Software LLC",
-        contactEmail: "contact@enevels.com", // UPDATE THIS
+        contactEmail: "contact@enevelsoftwarelabs.com", // UPDATE THIS
         location: "New York, USA", // UPDATE THIS
-        website: "www.enevels.com", // UPDATE THIS
+        website: "www.enevelsoftwarelabs.com", // UPDATE THIS
         copyrightYear: new Date().getFullYear(),
       };
 
